--- a/LogicAssetManager/Base.lproj/MainMenu.xib
+++ b/LogicAssetManager/Base.lproj/MainMenu.xib
@@ -815,7 +815,7 @@
                                                 <binding destination="Z0H-RM-ewo" name="enabled" keyPath="selection.canDelete" id="1Nz-so-MiP"/>
                                             </connections>
                                         </button>
-                                        <button verticalHuggingPriority="750" id="dnk-ca-I2L">
+                                        <button toolTip="Add New Group" verticalHuggingPriority="750" id="dnk-ca-I2L">
                                             <rect key="frame" x="8" y="6" width="22" height="22"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <buttonCell key="cell" type="smallSquare" bezelStyle="smallSquare" image="NSAddTemplate" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="eP9-YR-oki">
@@ -826,7 +826,7 @@
                                                 <action selector="actAddGroup:" target="FqK-Cd-cJA" id="ka8-97-7bb"/>
                                             </connections>
                                         </button>
-                                        <button verticalHuggingPriority="750" id="RWW-dX-RGb">
+                                        <button toolTip="Remove Selected Group" verticalHuggingPriority="750" id="RWW-dX-RGb">
                                             <rect key="frame" x="29" y="6" width="22" height="22"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <buttonCell key="cell" type="smallSquare" bezelStyle="smallSquare" image="NSRemoveTemplate" imagePosition="overlaps" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Fa7-Dz-2nL">
@@ -917,7 +917,7 @@
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="196" y="240" width="410" height="144"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1178"/>
-            <value key="minSize" type="size" width="410" height="120"/>
+            <value key="minSize" type="size" width="410" height="144"/>
             <view key="contentView" id="8Ht-eU-H1e">
                 <rect key="frame" x="0.0" y="0.0" width="410" height="144"/>
                 <autoresizingMask key="autoresizingMask"/>
@@ -953,12 +953,12 @@ Gw
                     <popUpButton verticalHuggingPriority="750" id="OB2-mq-CjR">
                         <rect key="frame" x="173" y="55" width="220" height="26"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
-                        <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="Vts-r0-vfT">
+                        <popUpButtonCell key="cell" type="push" title="Item 1" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="faZ-wB-Ugi" id="Vts-r0-vfT">
                             <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
                             <menu key="menu" title="OtherViews" id="bwB-Rj-SQF">
                                 <items>
-                                    <menuItem title="Item 1" id="faZ-wB-Ugi"/>
+                                    <menuItem title="Item 1" state="on" id="faZ-wB-Ugi"/>
                                     <menuItem title="Item 2" id="H4e-sT-Z1P"/>
                                     <menuItem title="Item 3" id="DUb-3I-AAJ"/>
                                 </items>
@@ -966,7 +966,7 @@ Gw
                         </popUpButtonCell>
                     </popUpButton>
                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" setsMaxLayoutWidthAtFirstLayout="YES" id="W8D-WV-V3R">
-                        <rect key="frame" x="71" y="88" width="321" height="42"/>
+                        <rect key="frame" x="64" y="88" width="328" height="42"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <textFieldCell key="cell" sendsActionOnEndEditing="YES" id="tN3-o8-CnK">
                             <font key="font" metaFont="system"/>
@@ -978,13 +978,13 @@ Gw
                         </textFieldCell>
                     </textField>
                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" id="ajA-T2-GiI">
-                        <rect key="frame" x="12" y="88" width="42" height="42"/>
+                        <rect key="frame" x="12" y="90" width="42" height="42"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSCaution" id="9SD-Hg-5cX"/>
                     </imageView>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="EH0-jh-Ifh">
-                        <rect key="frame" x="71" y="62" width="98" height="17"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <rect key="frame" x="52" y="62" width="117" height="17"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Transfer to :" id="kV9-vZ-nO1">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
